[gd_scene load_steps=5 format=3 uid="uid://yhuh0huitds8"]

[ext_resource type="Script" path="res://example/game-controller.gd" id="1_y8ty4"]
[ext_resource type="Script" path="res://addons/very-simple-twitch/twitch_api.gd" id="2_kxlmn"]
[ext_resource type="Script" path="res://addons/very-simple-twitch/twitch_chat.gd" id="4_yqbwg"]
[ext_resource type="Script" path="res://example/ChatContainer.gd" id="5_rggnq"]

[node name="test" type="Node2D"]
script = ExtResource("1_y8ty4")

[node name="TwitchAPI" type="Node" parent="."]
script = ExtResource("2_kxlmn")

[node name="TwitchChat" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_yqbwg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChatContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_rggnq")

[node name="Chat" type="Panel" parent="CanvasLayer/Control/ChatContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control/ChatContainer/Chat"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChatMessageContainer" type="VBoxContainer" parent="CanvasLayer/Control/ChatContainer/Chat/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="on_token_received" from="TwitchAPI" to="." method="_on_twitch_api_on_token_received"]
[connection signal="OnMessage" from="TwitchChat" to="." method="_on_twitch_chat_on_message"]
